--- a/config.yaml
+++ b/config.yaml
@@ -107,6 +107,6 @@ params:
   two:
     buttonText: Get Started
     enable: yes
-    subtitle: "Wer mit Ungeheuern kämpft, mag zusehn, dass er nicht dabei zum Ungeheuer wird. Und wenn du lange in einen Abgrund blickst, blickt der Abgrund auch in dich hinein."
-    title: NEED NOT TO KNOW
+    subtitle: "Having a friend from the far away is of great joy--Chinese poem"
+    title: Nice to Meet You
     url: blogs
